<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_full_holo_dark"
    android:orientation="vertical" >
    
    <!-- Title -->
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialog_month_title"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/white"
        />
    
    <!-- Row 1 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/dialog_month_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_1"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_month_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_2"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_month_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_3"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
    
    <!-- Row 2 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/dialog_month_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_4"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_month_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_5"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_month_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_6"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
    
    <!-- Row 3 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/dialog_month_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_7"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_month_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_8"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_month_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_9"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
    
    <!-- Row 4 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/dialog_month_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_10"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_month_11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_11"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_month_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_month_12"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
    
</LinearLayout>