<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_full_holo_dark"
    android:orientation="vertical" >
    
    <!-- Title -->
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialog_year_title"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/white"
        />
    
    <!-- Row 1 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/dialog_year_15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_year_15"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_year_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_year_16"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
    
    <!-- Row 2 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/dialog_year_17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_year_17"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button 
            android:id="@+id/dialog_year_18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:background="@drawable/button_background_dark"
            android:text="@string/dialog_year_18"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
    
</LinearLayout>