<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kr.co.goodruns.StartActivity">

    <LinearLayout
        android:id="@+id/form_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_desc"/>

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btn_start_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@color/flat_alizarin" />

    </LinearLayout>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btn_start_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/form_signup"
        android:text="@string/login"
        android:background="@color/flat_alizarin" />

</RelativeLayout>
