<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kr.co.goodruns.CommentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/comment_write"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/et_comment_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:textSize="@dimen/text_size_large"
            android:background="@color/transparent"
            android:gravity="top|start"
            android:singleLine="false"
            android:imeOptions="normal"
            android:inputType="textMultiLine"
            android:hint="@string/comment_hint"/>

        <TextView
            android:id="@+id/tv_comment_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="100"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"/>

    </RelativeLayout>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btn_comment_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/done"
        android:background="@color/flat_alizarin" />

</LinearLayout>
